--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,8 @@ const featured = guides.slice(0, 6);
     </p>
 
     <div style="display:flex; gap:10px; flex-wrap:wrap; margin-top: 10px;">
-      <a class="btn primary" href="/guides/">Browse guides</a>
+      <a class="btn primary" href="/start/">Start here</a>
+      <a class="btn" href="/guides/">Browse guides</a>
       <a class="btn" href="/guides/jellyfin-ubuntu-low-power/">Start with Jellyfin</a>
       <a class="btn" href="/guides/mini-pc-under-200/">Mini PC under £200</a>
     </div>
