--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -37,6 +37,7 @@ const canonicalUrl = canonicalPath
 
         <nav class="nav">
           <a class="btn" href="/guides/">Guides</a>
+          <a class="btn" href="/journal/">Journal</a>
           <a class="btn" href="/about/">About</a>
           <a class="btn" href="/privacy/">Privacy</a>
           <a class="btn primary" href="/contact/">Contact</a>
